--- a/examples/configs.json
+++ b/examples/configs.json
@@ -5,12 +5,13 @@
     "LEFT_TOPHAT": 0,
     "RIGHT_TOPHAT": 1,
 
+    "FRONT_BUTTON": 0,
+
     "LEFT_MOTOR": 2,
     "RIGHT_MOTOR": 3,
     
-    "LEFT_TOPHAT_BLACK": 3000,
-    "RIGHT_TOPHAT_BLACK": 3500,
-    "CREATE_TOPHAT_BLACK": 2000,
+    "TOPHAT_BLACK": 3000,
+    "CREATE_BLACK": 2000,
 
     "CLAW_OPEN": 500,
     "CLAW_CLOSED": 0,
